--- a/src/App.css
+++ b/src/App.css
@@ -57,10 +57,26 @@ a:hover{
 
 .skills-text {
   width: 70%;
-  font-size: 1.2rem;
+  font-size: 1.68rem;
   text-align: justify;
 }
 
 .project-link {
   padding: 0 2%;
+}
+
+.ui.card>.content>.header:not(.ui), .ui.cards>.card>.content>.header:not(.ui) {
+  font-size: 1.8rem;
+}
+
+.ui.card .meta, .ui.cards>.card .meta {
+  font-size: 1.4rem;
+}
+
+.ui.card>.content>.header+.description, .ui.card>.content>.meta+.description, .ui.cards>.card>.content>.header+.description, .ui.cards>.card>.content>.meta+.description {
+  font-size: 1.4rem;
+}
+
+.ui.card>.extra a:not(.ui), .ui.cards>.card>.extra a:not(.ui) {
+  font-size: 1.4rem;
 }
