--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+:root {
+  font-size: 62.5%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 62.5%;
+  font-size: 1.6rem;
   box-sizing: border-box;
 }
 
