--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,10 @@ a:hover{
 }
 
 .card-container {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   display: flex;
+  justify-content: space-around;
 }
 
 .skills-number {
@@ -61,22 +62,61 @@ a:hover{
   text-align: justify;
 }
 
-.project-link {
-  padding: 0 2%;
+.particle-background {
+  background-color: #30323D;
+  position: absolute !important;
+  top: 12.5vh;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.ui.card>.content>.header:not(.ui), .ui.cards>.card>.content>.header:not(.ui) {
-  font-size: 1.8rem;
+.about-me-text {
+  font-size: 2.4rem;
+  text-align: center;
+  min-height: 10rem;
+  width: 30%;
 }
 
-.ui.card .meta, .ui.cards>.card .meta {
-  font-size: 1.4rem;
+@media screen and (max-width: 500px) {
+  .about-me-text {
+    width: 60%
+  }
 }
 
-.ui.card>.content>.header+.description, .ui.card>.content>.meta+.description, .ui.cards>.card>.content>.header+.description, .ui.cards>.card>.content>.meta+.description {
-  font-size: 1.4rem;
+.slide-in {
+  bottom: 0;
+  animation: slide-in 1s ease;
 }
 
-.ui.card>.extra a:not(.ui), .ui.cards>.card>.extra a:not(.ui) {
-  font-size: 1.4rem;
+.slide-out {
+  bottom: -30rem;
+  animation: slide-out 1s forwards;
 }
+
+@keyframes slide-in {
+  from {bottom: -30rem;}
+  to {bottom: 0;}
+}
+
+@keyframes slide-out {
+  from {bottom: 0;}
+  to {bottom: -30rem;}
+}
+
+.skills-icons {
+  font-size: 7rem;
+  color: #30323D;
+}
+
+.skills-icons:hover {
+  color: #F9C2DC;
+}
+
+.skills-bottom {
+  flex-grow: 1;
+}
+.border-right {
+  border-right: 2px solid black;
+}
+
