--- a/src/components/admin/dashboard/projects/dropzone.css
+++ b/src/components/admin/dashboard/projects/dropzone.css
@@ -26,7 +26,7 @@
     border-color: rgb(102, 102, 102);
     border-style: dashed;
     border-radius: 5px;
-    margin: 0 auto;
+    margin: 0 auto 25px;
     display: flex;
     justify-content: center;
     align-items: center;
