--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
   font-size: 62.5%;
   box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%; /* 62.5% of 16px = 10px */
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +14,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 62.5%;
   box-sizing: border-box;
   background-color: #FAF4DD;
 }
